--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.3"
   },
