--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "react": "^18.1.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.9.0",
-    "react-toastify": "^9.1.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
